opam-version: "1.2"
name: "gdbprofiler"
maintainer: "copy@copy.sh"
authors: "copy"
homepage: "https://github.com/copy/gdbprofiler"
bug-reports: "https://github.com/copy/gdbprofiler/issues"
license: "LGPL-2.1 with OCaml linking exception"
dev-repo: "https://github.com/copy/gdbprofiler.git"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
install: ["ocaml" "setup.ml" "-install"]
remove: ["ocamlfind" "remove" "gdbprofiler"]
depends: [
  "menhir"
  ("extlib" | "extlib-compat")
  "lwt" {>= "2.4.6"}
  "jbuilder" {build}
  "containers" {>= "0.20"}
]
available: [ocaml-version >= "4.02.0"]
